# AMLS_II_assignment23_24

./: .gitignore  Classifier_Test.ipynb  README.md  filtered_train.csv  main.py  pyproject.toml  requirements.txt
Classifiers/: WhaleClassifier.py  WhaleClassifierWithAdditionalConvLayer.py  WhaleClassifierWithDropout.py  __init__.py
Notebooks/: Data_Explorer.ipynb  Data_Preprocessing.ipynb  Limit_TrainSet.ipynb  Species_Classifier.ipynb
Report/: matt.aux  matt.tex  references.bib  report.aux  report.bbl  report.blg  report.out  report.tex
Utils/: WhaleDataset.py  __init__.py
