[tool.poetry]
name = "amls-ii-assignment23-24"
version = "0.1.0"
description = ""
authors = ["Matt <matthewrharding@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
jupyter = "^1.0.0"
torchvision = "^0.17.2"
pandas = "^2.2.1"
black = "^24.3.0"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
bbox-utility = "^1.0.13"
opencv-python = "^4.9.0.80"
imagesize = "^1.4.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
